<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatePriceFragment">

    <!--Takes a number for the amount of washes wanted-->
    <EditText
        android:id="@+id/washes_wanted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="16sp"
        android:autofillHints=""
        android:backgroundTint="@color/UITint"
        android:hint="@string/enter_number"
        android:inputType="number"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor" />

    <RadioGroup
        android:id="@+id/wash_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/washes_wanted">

        <RadioButton

            android:id="@+id/outside_wash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:buttonTint="@color/UITint"
            android:text="@string/outside"
            android:textColor="@color/textColor"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/inside_out_wash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:buttonTint="@color/UITint"
            android:checked="true"
            android:text="@string/inside_out"
            android:textColor="@color/textColor"

            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/calculate_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wash_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32sp"
        android:text="@string/button_text" />

</RelativeLayout>